--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,12 @@
 	    <artifactId>mysql-connector-java</artifactId>
 	    <version>5.0.8</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+	<dependency>
+	    <groupId>com.alibaba</groupId>
+	    <artifactId>fastjson</artifactId>
+	    <version>1.2.7</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>auv</finalName>
