--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,19 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    <!-- 文件上传
+    https://mvnrepository.com/artifact/commons-io/commons-io -->
+	<dependency>
+	    <groupId>commons-io</groupId>
+	    <artifactId>commons-io</artifactId>
+	    <version>2.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>commons-fileupload</groupId>
+	    <artifactId>commons-fileupload</artifactId>
+	    <version>1.3.1</version>
+	</dependency>
+    
     <!-- servlet -->
 	<dependency>
 	    <groupId>javax.servlet</groupId>
